config/demo/hello-servlet/delivery.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-servlet
  annotations:
    kapp.k14s.io/update-strategy: fallback-on-replace
    ootb.apps.tanzu.vmware.com/servicebinding-workload: "true"
    kapp.k14s.io/change-rule: upsert after upserting servicebinding.io/ServiceBindings
  labels:
    app.kubernetes.io/part-of: hello-servlet
    apps.tanzu.vmware.com/has-tests: "true"
    apps.tanzu.vmware.com/workload-type: server
    app.kubernetes.io/component: run
    carto.run/workload-name: hello-servlet
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: run
      app.kubernetes.io/part-of: hello-servlet
      apps.tanzu.vmware.com/has-tests: "true"
      apps.tanzu.vmware.com/workload-type: server
      carto.run/workload-name: hello-servlet
  template:
    metadata:
      annotations:
        conventions.carto.run/applied-conventions: |-
          inspect-image-convention/buildpacks
          inspect-image-convention/base-image
          inspect-image-convention/run-image
          inspect-image-convention/source
          spring-boot-convention/auto-configure-actuators-check
          spring-boot-convention/app-live-view-appflavour-check
          appliveview-sample/app-live-view-appflavour-check
        developer.conventions/target-containers: workload
        inspect-image.buildpacks.io/base-image: |-
          reference: ghcr.io/making/build-service@sha256:9dd08018eb5c8ffae08d12c72d5c49ab9f9580ba152abc718d2e7ea673fb0867
          top_layer: sha256:8c18fdd12a98e4e60a2111aeb00c38b89a2d46f08154433bdfe4c54eeccc4ef6
        inspect-image.buildpacks.io/buildpacks: |-
          - id: paketo-buildpacks/ca-certificates
            version: 3.6.0
          - id: paketo-buildpacks/bellsoft-liberica
            version: 9.11.0
          - id: paketo-buildpacks/syft
            version: 1.10.1
          - id: paketo-buildpacks/maven
            version: 6.13.0
          - id: paketo-buildpacks/executable-jar
            version: 6.6.2
          - id: paketo-buildpacks/apache-tomcat
            version: 7.12.1
          - id: paketo-buildpacks/apache-tomee
            version: 1.6.1
          - id: paketo-buildpacks/liberty
            version: 3.5.0
          - id: paketo-buildpacks/dist-zip
            version: 5.5.2
          - id: paketo-buildpacks/spring-boot
            version: 5.23.0
          - id: paketo-buildpacks/image-labels
            version: 4.4.1
          - id: paketo-buildpacks/opentelemetry
            version: 1.0.0
        inspect-image.buildpacks.io/run-image: ghcr.io/making/build-service@sha256:9dd08018eb5c8ffae08d12c72d5c49ab9f9580ba152abc718d2e7ea673fb0867
        inspect-image.opencontainers.org/source: master/3c6e5e38b316c99f8ec2ca67e2671f79f1120d8c
      labels:
        app.kubernetes.io/component: run
        app.kubernetes.io/part-of: hello-servlet
        apps.tanzu.vmware.com/has-tests: "true"
        apps.tanzu.vmware.com/workload-type: server
        carto.run/workload-name: hello-servlet
    spec:
      containers:
      - env:
        - name: JAVA_TOOL_OPTIONS
        - name: OTEL_SERVICE_NAME
          value: hello-service
        - name: OTEL_TRACES_EXPORTER
          value: zipkn
        - name: OTEL_EXPORTER_ZIPKIN_ENDPOINT
          value: https://zipkin.ik.am/api/v2/spans
        - name: OTEL_LOG_LEVEL
          value: trace
        - name: OTEL_PROPAGATORS
          value: b3multi
        - name: OTEL_JAVAAGENT_ENABLED
          value: "true"
        image: ghcr.io/making/supply-chain/hello-servlet-demo@sha256:ea906a584634b034cdfbc362f0e3be2f695a267e0f050a03b26953e7c7634778
        name: workload
        resources: {}
        securityContext:
          runAsUser: 1000
      serviceAccountName: default
---
apiVersion: v1
kind: Service
metadata:
  name: hello-servlet
  labels:
    app.kubernetes.io/part-of: hello-servlet
    apps.tanzu.vmware.com/has-tests: "true"
    apps.tanzu.vmware.com/workload-type: server
    app.kubernetes.io/component: run
    carto.run/workload-name: hello-servlet
spec:
  selector:
    app.kubernetes.io/component: run
    app.kubernetes.io/part-of: hello-servlet
    apps.tanzu.vmware.com/has-tests: "true"
    apps.tanzu.vmware.com/workload-type: server
    carto.run/workload-name: hello-servlet
  ports:
  - targetPort: 8080
    port: 8080
    name: http
