config/demo/hello-servlet/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-servlet
  annotations:
    kubernetes.io/ingress.class: contour
    cert-manager.io/cluster-issuer: "letsencrypt"
    kapp.k14s.io/change-rule: "upsert after upserting Services"
  labels: 
    app.kubernetes.io/part-of: hello-servlet
    apps.tanzu.vmware.com/has-tests: "true"
    apps.tanzu.vmware.com/workload-type: server
    app.kubernetes.io/component: run
    carto.run/workload-name: hello-servlet
    
spec:
  tls:
    - secretName: hello-servlet-tls
      hosts:
      - hello-servlet-demo.run.lime.maki.lol
  rules:
  - host: hello-servlet-demo.run.lime.maki.lol
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-servlet
            port:
              number: 8080
